see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Jun-2011 Jean-Marie Simonet
 $ Added missing lang strings
 # [#26153] Modals inaccessible because JFile isn't loaded. Thanks Rouven
 # [#26136] Add back borders in editor for codemirror. Thanks Andrea.
 $ [#26101] pagebreak or page break. Thanks Bill.
 # [#26160] com_content archive view does not display the parent category. Thanks Christophe.
 
13-Jun-2011 Mark Dexter
 # [#26158] Cannot create menu items

12-Jun-2011 Jean-Marie Simonet
 # [#26137] Fix parameter conditions for bluestork css files. Thanks Andrea.
 # [#26146] Bluestork admin error.php not loading css files. Thanks bug squad ;)

12-Jun-2011 Christophe Demko
 # [#26135] Remove wrong background on bluestork login (Rouven Weßling)
 # [#26128] Sync admin layouts (hathor) (Rouven Weßling, Andrea Tarr)

11-Jun-2011 Jean-Marie Simonet
 - # Revert [#25041] Module Menu Assignment Enhancements. Breaks 1.6.x existing sites. See feature tracker.

10-Jun-2011 Christophe Demko
 # [#25248] Systematic elimination of DS as directory separator - Final round
 # [#26107] RTL issues with trunk (Ofer Cohen)
 # [#26121] wrong output of mod_custom (Mark Visser)
 # [#24137] Decide and document what value the required attribute takes for JForm. (Rune Sjøen)
 # [#26119] Update TinyMCE to version 3.4.3 (Rouven Weßling)
 # [#26084] Don't always load Mootools (More) in the backend - this time for real (Rouven Weßling)
 # [#26112] Remove unnecessary file from CodeMirror (Rouven Weßling)
 # [#26069] Don't render <meta name="rights"> when it has no content. (Rune Sjøen)